--- a/semiPrjWorkspace/semiPrjJDGR/src/main/webapp/resources/user/css/style.css
+++ b/semiPrjWorkspace/semiPrjJDGR/src/main/webapp/resources/user/css/style.css
@@ -463,7 +463,7 @@ footer {
 .membership_box .btn_area {
     margin-top: 70px;
 }
-.membership_box .btn_area > * {
+.membership_box .btn_area > button {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -477,7 +477,7 @@ footer {
     transition: .2s;
     cursor: pointer;
 }
-.membership_box .btn_area > *:hover {
+.membership_box .btn_area > button:hover {
     background-color: #ff7878;
 }
 .membership_area .form_box div input {
