[기능 구현] 고객센터 페이지 완료 1:1문의 상세 목록 진행 중

--- a/semiPrjWorkspace/semiPrjJDGR/src/main/webapp/resources/user/css/ydg.css
+++ b/semiPrjWorkspace/semiPrjJDGR/src/main/webapp/resources/user/css/ydg.css
@@ -60,7 +60,9 @@
     padding: 10px;
     text-align: center;
 }
-
+.tbl_box.q_data table tbody tr{
+    cursor: pointer;
+}
 .tbl_box.q_data table td:nth-child(2){
     text-align: left;
 }
