[기능구현] 관리자 공지사항 상세 목록 조회 기능 구현

--- a/semiPrjWorkspace/semiPrjJDGR/src/main/webapp/resources/admin/css/common.css
+++ b/semiPrjWorkspace/semiPrjJDGR/src/main/webapp/resources/admin/css/common.css
@@ -805,7 +805,9 @@
 .tbl_box.data table td {
     padding: 7px 0;
 }
-
+.tbl_box.data table tbody tr{
+    cursor: pointer;
+}
 /* chklist */
 .chklist_box {
     display: flex;
