--- a/semiPrjWorkspace/semiPrjJDGR/src/main/webapp/resources/user/css/joj.css
+++ b/semiPrjWorkspace/semiPrjJDGR/src/main/webapp/resources/user/css/joj.css
@@ -17,10 +17,13 @@
 
 .head01 > .right01 {
     display: flex;
+    position: relative;
     align-items: center;
     gap: 10px;
 }
-
+.right01 .set.on .reply_pop > div {
+	display: block;
+}
 .head01 > .left01 {
     display: flex;
     align-items: center;
