--- a/semiPrjWorkspace/semiPrjJDGR/src/main/webapp/resources/user/css/ydg.css
+++ b/semiPrjWorkspace/semiPrjJDGR/src/main/webapp/resources/user/css/ydg.css
@@ -104,7 +104,7 @@
     display: flex;
     /* justify-content: center; */
     align-items: center;
-    gap: 920px;
+    gap: 860px;
 }
 .noti_tbl table tbody tr:nth-child(2) th div img{
     width: 13px;
@@ -129,4 +129,11 @@
 .qboard_btn a:nth-child(2){
     background-color: var(--line-color);
     color:#000;
+}
+.fixedTdTag{
+    position: relative;
+}
+.fixedTdTag > img{
+    position: absolute;
+    top: 10px;
 }
