post 기능 정리 완료 / 구독 기능구현 중

--- a/semiPrjWorkspace/semiPrjJDGR/src/main/webapp/resources/user/css/joj.css
+++ b/semiPrjWorkspace/semiPrjJDGR/src/main/webapp/resources/user/css/joj.css
@@ -117,3 +117,7 @@ button.btn_k.plus {
     background: url(../images/ico/ico_v2.svg) no-repeat left;
 }
 
+button.btn_k.rep {
+    background: url(../images/ico/ico_reply_b.svg) no-repeat left;
+}
+
