--- a/semiPrjWorkspace/semiPrjJDGR/src/main/webapp/resources/user/css/joj.css
+++ b/semiPrjWorkspace/semiPrjJDGR/src/main/webapp/resources/user/css/joj.css
@@ -1,8 +1,10 @@
 .container01 {
     width: 100%;
-    height: 700px;
     display: grid;
     grid-template-rows: 170px auto 50px;
+}
+.container01 img {
+	max-width: 100% !important;
 }
 
 .header01 {
