포스트 이미지 / 댓글 하트색 변경

--- a/semiPrjWorkspace/semiPrjJDGR/src/main/webapp/resources/user/css/joj.css
+++ b/semiPrjWorkspace/semiPrjJDGR/src/main/webapp/resources/user/css/joj.css
@@ -108,7 +108,7 @@
 }
 
 button.btn_k.like {
-    background: url(../images/ico/ico_like_b.svg) no-repeat left;
+    background: url(../images/ico/ico-like-red.svg) no-repeat left;
 }
 
 button.btn_k.un_like {
