css수정 및 마이페이지연결

--- a/semiPrjWorkspace/semiPrjJDGR/src/main/webapp/resources/user/css/hjy.css
+++ b/semiPrjWorkspace/semiPrjJDGR/src/main/webapp/resources/user/css/hjy.css
@@ -116,7 +116,7 @@
     color: #fff;
 }
 .best10_content ul li a .txt .content img {display: none;}
-.postbox .postWrite img {display: none;}
+.postbox .postWrite .postWriteLink img {display: none;}
 .best10_content ul li a:hover .txt .content span {
     display: -webkit-box;
 }
@@ -327,6 +327,9 @@
 .user_content .after_login .tab_group .tab_btns {
     gap: 0;
     margin: 0;
+}
+.tab_btns.category {
+    flex-wrap: wrap;
 }
 .user_content .after_login .tab_group .tab_btns li {
     flex: 1;
